--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ certifi==2019.11.28
 chardet==3.0.4
 dj-database-url==0.5.0
 Django==3.0.4
-django-leaflet==0.26.0
+django-crispy-forms==1.9.0
+django-heroku==0.3.1
+-e git+https://github.com/makinacorpus/django-leaflet.git@6805f167e08fcf2957993ac10ff340d2eeb5c9e3#egg=django_leaflet
+gunicorn==20.0.4
 idna==2.9
 leaflet==0.0.3
 Pillow==7.0.0
-pkg-resources==0.0.0
 psycopg2==2.8.4
 pytz==2019.3
 requests==2.23.0
