--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ dj-database-url==0.5.0
 Django==3.0.4
 django-crispy-forms==1.9.0
 django-heroku==0.3.1
--e git+https://github.com/makinacorpus/django-leaflet.git@6805f167e08fcf2957993ac10ff340d2eeb5c9e3#egg=django_leaflet
+django-leaflet==0.26.0
 gunicorn==20.0.4
 idna==2.9
 leaflet==0.0.3
